fixed bugs in registration and listing scripts( profile Image was not showing and registared user was not remembered)

--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,7 @@ body {
   font-weight: 400;
   padding: 10px 20px;
   gap: 10px;
+  cursor: pointer;
 }
 
 /* Register link */
